--- a/style.css
+++ b/style.css
@@ -1,7 +1,62 @@
 body {
-    background: #000;
+    background: #1c1c1c;
+    margin:     auto;
+    width:      70%;
+}
+
+#comingsoon {
     background-image: url(img/comingsoon.jpg);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: 100%;
+    height: auto;
+    margin: auto;
+}
+
+#header {
+    background: #0f0f0f;
+    background-image: url(img/assets/header_bg.svg);
+    background-position: right top;
+    background-repeat: no-repeat;
+    background-size: auto;
+    min-height: 140px;
+}
+
+#logo {
+    background-image: url(img/assets/site_logo.svg);
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 2.5em;
+    left: 5ex;
+    min-height: 36px;
+    position: relative;
+    top: 2.5em;
+    width: 20ex;
+}
+
+#banner {
+    background-image:    url(img/assets/ngage-banner-site-01@3x.jpg);
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-height: 1200px;
+}
+
+@media screen and (max-width: 2560px) {
+    #banner {
+        background-image: url(img/assets/ngage-banner-site-01@2x.png);
+        max-height: 800px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    #banner {
+        background-image: url(img/assets/ngage-banner-site-01.png);
+        max-height: 400px;
+    }
+}
+
+@media screen and (max-width: 6cm) {
+
 }
